--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "airbnb": "^0.0.2",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -19,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "react-slideshow-image": "^3.6.0",
     "redux-form": "^8.3.8",
     "reselect": "^4.1.5",
